--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -e .  # Instala el paquete en modo desarrollo
     - name: Run tests
       run: |
-        pytest tests/ --cov=src
+        python -m pytest tests/ --cov=src
     - name: Run linting
       run: |
         flake8 src/ tests/
-
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
