--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,4 +3,13 @@ sonar.projectName=Logistics System
 sonar.sources=src
 sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.python.version=3.9 
+sonar.python.version=3.9
+
+sonar.sourceEncoding=UTF-8
+sonar.python.pylint=/usr/local/bin/pylint
+sonar.python.pylint_config=.pylintrc
+sonar.python.flake8=/usr/local/bin/flake8
+sonar.python.flake8_config=.flake8
+
+sonar.exclusions=**/tests/**, **/migrations/**, **/__pycache__/**, **/*.pyc
+sonar.coverage.exclusions=**/tests/**, **/migrations/**, setup.py
