--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,11 @@
-sonar.projectKey=logistics_system
-sonar.projectName=Logistics System
+sonar.organization=deviscoutb
+sonar.projectKey=ISCODEVUTB_DSTeam_Cientificos
+sonar.projectName=ISCODEVUTB_DSTeam_Cientificos
+sonar.host.url=https://sonarcloud.io
 sonar.sources=src
 sonar.tests=tests
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.projectVersion=1.0
 sonar.python.version=3.9
 
 sonar.sourceEncoding=UTF-8
